# SetupSpark

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup_spark_args.txt
setupspark/: hadoop.py  setup.py  spark.py
setupspark/utils/: download_utils.py  logger.py  spark.py
tests/: test_download_utils.py
